# nuarctic

./: .gitattributes  .gitignore  Getting_started_with_REcoM1D.md  MOSAiC_Icetrack_trajectory.nc  README.md  environment.yml
1D_model/: ReCoM_structure.ods
1D_model/DefaultMOPS/: BGC_BUDGET.h  BGC_DIAGNOSTICS.h  BGC_INI.F  BGC_MISFIT.h  BGC_MODEL.F  BGC_PARAMS.h  CAR_CHEM.F  CAR_INI.F  CAR_PARAMS.h  README.TestBed  TestBed.fpp  compilemodel  readtestbed.jnl
REcoM1D/: CMakeLists.txt  configure.sh  env.sh  run_REcoM1D.sh  run_REcoM1D_mpmd.slurm  run_REcoM1D_pdaf.slurm  set_path_REcoM.sh
REcoM1D/cmake/: FindNETCDF.cmake
REcoM1D/config/: addition_namelist.recom  namelist.config  namelist.ocean  namelist.recom  parameter_selection.nml  parameter_selection_chl_param.nml  pdaf.nml  time.recom  time.recom_v1
REcoM1D/config/scripts/: REcoM_time.sh  parse_namelist.sh  test.clock  time_configuration_file.txt  write_time_configuration_REcoM.py
REcoM1D/data/: atm_deposition.nc  atm_deposition_v2.nc  tracer_initialization.nc
REcoM1D/env/albedo/: shell  shell_pdaf
REcoM1D/env/ollie/: shell  shell_intel
REcoM1D/env/ubuntu/: shell
REcoM1D/forcing/: Create_constant_forcing.ipynb  REcoM1D_forcing_v2.nc
REcoM1D/grid/: Create_REcoM1D_mesh.ipynb  REcoM1D_mesh.nc  REcoM1D_mesh_v2.nc
REcoM1D/grid/mesh/core2/: nlvls.out  nod2d.out
REcoM1D/grid/track/: MOSAiC_Icetrack_trajectory.nc  Polarstern_trajectory.nc
REcoM1D/pdaf_bindings/: CMakeLists_pdaf.txt  README.md  REcoM1D_main.F90  assimilate_pdaf.F90  callback_obs_pdafomi.F90  collect_state_pdaf.F90  distribute_state_pdaf.F90  finalize_pdaf.F90  init_ens_pdaf.F90  init_parallel_pdaf.F90  init_pdaf.F90  init_pdaf_parse.F90  mod_assimilation.F90  mod_constants.F90  mod_parallel_pdaf.F90  mod_perturbation_pdaf.F90  mod_utils.F90  next_observation_pdaf.F90  obs_chl_pdafomi.F90  obs_din_pdafomi.F90  obs_dsi_pdafomi.F90  prepoststep_ens_pdaf.F90  read_param_selection.F90  shell_pdaf
REcoM1D/results/: REcoM1d_diagnostics.nc  REcoM1d_outputs.nc  test.clock
REcoM1D/src/: CMakeLists.txt  Compile_REcoM1D.sh  Makefile  REcoM1D_main.F90  forcing_modules.F90  init_pdaf.F90  mod_assimilation.F90  ocean_ice_modules.F90  prepoststep_ens_pdaf.F90  recom_clock.F90  recom_diagnostics.F90  recom_extra.F90  recom_forcing.F90  recom_init.F90  recom_main.F90  recom_modules.F90  recom_setup.F90  recom_sms.F90  recom_tracers.F90  template_CMakeLists.txt
REcoM1D/src/recom/: buffesm.F90  constants.F90  create_recom_library.sh  depth2press.F90  derivauto.F90  derivnum.F90  eos.F90  errors.F90  f2pCO2.F90  gasx.F90  p2fCO2.F90  rhoinsitu.F90  tis.F90  tpot.F90  vars.F90
REcoM1D/src/resteafaire/: readme.txt  recom_modules_diag.F90
UVP/data/: mosaic_flux_slope.nc
UVP/scripts/: Measurement_map.ipynb
data/: MOSAiC_All_at_AWI_Data_V3.txt  MOSAiC_Chla_forLaurent_20220905.nc  PS122_NUTRIENTS.nc  PS122_NUTRIENTS_AWI-230508.csv  PS122_NUTRIENTS_PS-230508.csv
data/CHLA/: MOSAiC_Chla_forLaurent_20220905.xlsx
data/CTD/: ITP_daily_data.nc  ITP_daily_data_v2.nc
data/CTD_Rosette/: README_FIRST.txt
data/DOC/: DOC.csv
data/ITP_CTD_Ben/: ITP_daily_data.nc  Process_CTD_Ben.ipynb
data/ITP_PAR/: PAR_forcing.nc  PAR_forcing_v2.nc
data/MESH/: REcoM1D_daily_mesh.nc  REcoM1D_daily_mesh_v2.nc  REcoM1D_mesh.nc  REcoM1D_mesh_v2.nc
data/METEO/: ERA5_forcing_Polarstern.nc  PS122-1_meteorology.tab  PS122-2_meteorology.tab  PS122-3_meteorology.tab  PS122-4_meteorology.tab  PS122-5_meteorology.tab
data/MSS/: MOSAiC_MSS_daily_Kz.nc  MOSAiC_MSS_daily_Kz_v2.nc  MOSAiC_MSS_daily_avg_Kz.nc  MSS_MOSAiC_ArcticOcean_20192020.nc
data/NUTRIENTS/: 06AQ20190920.csv  MOSAiC_All_at_AWI_Data_V3.txt  MOSAiC_Nutrients_Legs_1-3_v4.txt
data/UVP/: MOSAIC_C_pred.tsv  (+3 more)
notebooks/: PREPOSS_PS122_NUTRIENTS_MERGED.ipynb  PREPROSS_PS122_NUTRIENTS_MERGED.ipynb  preposs_chl_obs_mosaic.ipynb  prepross_chl_obs_mosaic.ipynb
(+208 files in other folders)
